# Heat_Equation

./: .gitignore  CMakeLists.txt
scripts/: launcher.py  servgen.py
source/: heat_eq.hpp  main.cpp  test_explmeth.cpp  testing.cpp
source/tofunction/: tofunction.h
